Fixed error regarding the white space on the right side of the content

--- a/css/index.css
+++ b/css/index.css
@@ -203,11 +203,14 @@ img {
   }
 }
 @media (max-width: 500px) {
+  .navigation a {
+    padding-right: 0;
+  }
   .navigation .nav-links {
     display: none;
   }
   .navigation .menu-icon {
-    display: block;
+    display: inline;
   }
 }
 .header {
@@ -396,6 +399,12 @@ img {
   border-radius: 5px;
   width: 400px;
   height: 50px;
+}
+@media (max-width: 768px) {
+  .contact-container .contact-form .message input {
+    width: 300px;
+    height: 200px;
+  }
 }
 footer {
   padding: 3rem;
