--- a/less/contact.less
+++ b/less/contact.less
@@ -42,7 +42,14 @@
             }
         }
 
-        
+        @media @tablet {
+            .message {
+                input {
+                    width: 300px;
+                    height: 200px;
+                }
+            }
+        }
         
     }
 }
