--- a/less/nav.less
+++ b/less/nav.less
@@ -43,15 +43,22 @@
     }
 
     @media @mobile {
+
+        a {
+            padding-right: 0;
+        }
         .nav-links {
             display: none;
         }
 
         .menu-icon {
-            display: block;
+            display: inline;
+            
         }
-    }
 
+        
+    
+    }
     
 }
 
